--- a/pom.xml
+++ b/pom.xml
@@ -62,9 +62,9 @@
             <version>0.9.1.2</version>
         </dependency>
         <dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.1-901-1.jdbc4</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.6</version>
         </dependency>
 		
         <dependency>
@@ -112,6 +112,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>3.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -121,8 +126,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
@@ -160,6 +165,11 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin> 
+                <groupId>org.codehaus.mojo</groupId> 
+                <artifactId>exec-maven-plugin</artifactId> 
+                <version>1.2.1</version> 
             </plugin>
         </plugins>
     </build>
